--- a/COMP4952Medium/COMP4952Medium/Site.Master
+++ b/COMP4952Medium/COMP4952Medium/Site.Master
@@ -38,7 +38,6 @@
                 <%--Site Scripts--%>
             </Scripts>
         </asp:ScriptManager>
-
         <div class="navbar-static-top overwrite-navbar" style="margin-top: -50px;">
             <div class="container">
                 <div class="navbar-header">
@@ -53,12 +52,13 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
+                        <li><a id="A1" runat="server" href="~/About">About</a></li>
+                        <li><a id="A2" runat="server" href="~/Contact">Contact</a></li>
+                        <li><a id="adminLink" runat="server" visible="false" href="~/AdminPage/Admin">Admin</a></li>
                     </ul>
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a id="A1" runat="server" href="~/About">About</a></li>
-                                <li><a id="A2" runat="server" href="~/Contact">Contact</a></li>
                                 <li><a id="A3" runat="server" href="~/Account/Login">Login</a></li>
                             </ul>
                         </AnonymousTemplate>
