integrated new graph and images into project. New database table Graph.cs

--- a/COMP4952Medium/COMP4952Medium/Content/FixedDivs.css
+++ b/COMP4952Medium/COMP4952Medium/Content/FixedDivs.css
@@ -7,9 +7,10 @@
 }
 
 body {
-    background: url("/images/background_image.jpg") no-repeat;
-    background-size: 100% 800px;
+    background-image: url("/images/background_image.jpg");
+    background-size: 100% 900px;
     background-color: #cccccc;
+    background-repeat: no-repeat;
 }
 
 #objectList {
@@ -33,7 +34,7 @@ body {
 
 #settings {
     background: #808080;
-    text-align: center;
+    
     height: 44px;
     border: 1px solid #009DA9;
 }
